--- a/index.html
+++ b/index.html
@@ -1,1 +1,282 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>KP Portfolio</title>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link type="text/css" href="custom.css" rel="stylesheet">
+</head>
+<body>
+
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">KRISHNA PRASAD</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#">INTRO</a></li>
+                <!--<li><a href="#summary">SUMMARY</a></li>-->
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#interest">INTERESTS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container-fluid">
+        <div class="page-header">
+            <h2 class="text-center"> PROGRAMMING ENTHUSIAST </h2>
+            <h2 class="text-center"> PASSIONATE SOFTWARE ENGINEER</h2>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <!-- Example row of columns -->
+    <div id="skills" class="row">
+        <h2 class="text-center">SKILLS</h2>
+        <div class="col-md-4">
+            <h3 class="text-bold text-center">LANGUAGES</h3>
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title" style="background: #46465e;"><span>Java</span></div>
+                <div class="skillbar-bar" style="background: #5a68a5;"></div>
+                <div class="skill-bar-percent">80%</div>
+            </div> <!-- End Skill Bar -->
+
+            <div class="skillbar clearfix " data-percent="60%">
+            <div class="skillbar-title" style="background: #27ae60;"><span>JS</span></div>
+            <div class="skillbar-bar" style="background: #2ecc71;"></div>
+            <div class="skill-bar-percent">60%</div>
+            </div> <!-- End Skill Bar -->
+
+            <div class="skillbar clearfix " data-percent="75%">
+            <div class="skillbar-title" style="background: #124e8c;"><span>C#</span></div>
+            <div class="skillbar-bar" style="background: #4288d0;"></div>
+            <div class="skill-bar-percent">75%</div>
+            </div> <!-- End Skill Bar -->
+
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title" style="background: #333333;"><span>HTML5</span></div>
+                <div class="skillbar-bar" style="background: #525252;"></div>
+                <div class="skill-bar-percent">80%</div>
+            </div> <!-- End Skill Bar -->
+
+            <div class="skillbar clearfix " data-percent="50%">
+                <div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+                <div class="skillbar-bar" style="background: #3498db;"></div>
+                <div class="skill-bar-percent">50%</div>
+            </div> <!-- End Skill Bar -->
+
+
+        </div>
+        <div class="col-md-4">
+            <h3 class="text-bold text-center">FRAMEWORKS</h3>
+            <img src="meteor.svg" width="100" height="100" class="img-responsive center-block " alt="Distributed Systems">
+            <img src="flink.png" width="100" height="100" class="img-responsive center-block" alt="Distributed Systems">
+            <img src="angular.svg" width="100" height="100" class="img-responsive center-block" alt="Distributed Systems">
+            <img src="mvc_logo.gif" width="100" height="100" class="img-responsive center-block" alt="Distributed Systems">
+            <!--<div class="progress">-->
+                <!--<div class="progress-bar progress-bar-success progress-bar-striped"-->
+                     <!--role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">-->
+                    <!--<span class="sr-only">40% Complete (success)</span>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="progress">-->
+                <!--<div class="progress-bar progress-bar-info progress-bar-striped"-->
+                     <!--role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">-->
+                    <!--<span class="sr-only">20% Complete</span>-->
+                <!--</div>-->
+            <!--</div>-->
+        </div>
+        <div class="col-md-4">
+            <h3>DATABASES</h3>
+            <img src="mongo.jpg" width="150" height="150" class="img-responsive center-block " alt="Distributed Systems">
+            <img src="mysql.png" width="150" height="150" class="img-responsive center-block" alt="Distributed Systems">
+
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div id="interests" class="row">
+        <h2 class="text-center">INTERESTS</h2>
+        <div class="col-lg-4">
+            <h3 class="text-center">INTERNET OF THINGS</h3>
+            <a href="#" class="thumbnail">
+                <img src="iot.png" width="200" height="200" class="img-responsive" alt="Internet of Things">
+            </a>
+        </div>
+        <div class="col-lg-4">
+            <h3 class="text-center">DISTRIBUTED SYSTEMS</h3>
+            <a href="#" class="thumbnail">
+                <img src="ds.png" width="200" height="200" class="img-responsive" alt="Distributed Systems">
+            </a>
+        </div>
+        <div class="col-lg-4">
+            <h3 class="text-center">BIG DATA</h3>
+            <a href="#" class="thumbnail">
+                <img src="bd.jpg" width="200" height="200" class="img-responsive" alt="Big Data">
+            </a>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div id="contact" class="row text-center">
+        <h2 class="text-center">CONTACT</h2>
+        <div class="col-md-6">
+            <address>
+                <strong>Krishna Prasad A R</strong><br>
+                3700 Casa Verde St, Apt #3401<br>
+                San Jose, CA 95134<br>
+                <abbr title="Phone">P:</abbr> (585) 743-8905
+            </address>
+        </div>
+        <div class="col-md-6">
+            <address>
+                <strong>Email</strong><br>
+                <a href="mailto:#">ka8849@rit.edu</a>
+            </address>
+            <address>
+                <strong>Profile</strong><br>
+                <a href="https://www.github.com/krishprasadar">Github</a>
+                <a href="https://www.linkedin.com/in/krishprasadar">LinkedIn</a>
+            </address>
+        </div>
+        <!-- <div class="panel panel-default">
+             <div class="panel-heading text-center">
+                 CONTACT
+             </div>
+             <div class="panel-body">
+
+
+             </div>
+         </div>-->
+    </div>
+</div>
+<!--<div class="container">
+    <div id="interests" class="row">
+        <div class="col-md-4">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+                euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
+                euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Heading</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
+                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+                fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+    </div>
+</div>-->
+
+<!--<div class="container">-->
+<!--<div id="contact1" class="row">-->
+<!--<h1>jQuery & CSS3 Skills Bar</h1>-->
+
+<!--<div class="skillbar clearfix " data-percent="20%">-->
+<!--<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>-->
+<!--<div class="skillbar-bar" style="background: #e67e22;"></div>-->
+<!--<div class="skill-bar-percent">20%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+
+<!--<div class="skillbar clearfix " data-percent="25%">-->
+<!--<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>-->
+<!--<div class="skillbar-bar" style="background: #3498db;"></div>-->
+<!--<div class="skill-bar-percent">25%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+
+<!--<div class="skillbar clearfix " data-percent="50%">-->
+<!--<div class="skillbar-title" style="background: #2c3e50;"><span>jQuery</span></div>-->
+<!--<div class="skillbar-bar" style="background: #2c3e50;"></div>-->
+<!--<div class="skill-bar-percent">50%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+
+<!--<div class="skillbar clearfix " data-percent="40%">-->
+<!--<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>-->
+<!--<div class="skillbar-bar" style="background: #5a68a5;"></div>-->
+<!--<div class="skill-bar-percent">40%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+
+<!--<div class="skillbar clearfix " data-percent="75%">-->
+<!--<div class="skillbar-title" style="background: #333333;"><span>Wordpress</span></div>-->
+<!--<div class="skillbar-bar" style="background: #525252;"></div>-->
+<!--<div class="skill-bar-percent">75%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+
+<!--<div class="skillbar clearfix " data-percent="100%">-->
+<!--<div class="skillbar-title" style="background: #27ae60;"><span>SEO</span></div>-->
+<!--<div class="skillbar-bar" style="background: #2ecc71;"></div>-->
+<!--<div class="skill-bar-percent">100%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+
+<!--<div class="skillbar clearfix " data-percent="70%">-->
+<!--<div class="skillbar-title" style="background: #124e8c;"><span>Photoshop</span></div>-->
+<!--<div class="skillbar-bar" style="background: #4288d0;"></div>-->
+<!--<div class="skill-bar-percent">70%</div>-->
+<!--</div> &lt;!&ndash; End Skill Bar &ndash;&gt;-->
+<!--</div>-->
+<!--</div>-->
+
+
+<hr>
+
+<footer>
+    <p class="text-center">&copy; Made with luv from <a href="https://www.linkedin.com/in/krishprasadar">KP </a></p>
+</footer>
+</div> <!-- /container-fluid -->
+
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+<script>
+    jQuery(document).ready(function () {
+        jQuery('.skillbar').each(function () {
+            jQuery(this).find('.skillbar-bar').animate({
+                //width: (parseInt(jQuery(this).attr('data-percent')) + 20) + "%"
+                width: jQuery(this).attr('data-percent')
+            }, 2000);
+        });
+    });
+</script>
+</body>
+</html>
